# SchoolPortfolio

./: README.md  Video Links
CSc 305/A1/: RayTracer.cs
CSc 305/A1/A1/: RayTracer.cs  RayTracerImg.cs  RayTracerTri.cs
CSc 305/A2/: AmbientShader.shader  Grider.cs  ObjectInWorldHouse.cs  ObjectInWorldTree.cs  Sphere.mat  SphereShader.shader
CSc 305/A3/: Boid.cs  CatmullSpline3D.cs  ObjectMovement.cs
CSc 471/A1/: assignment.hpp  main.cpp  suzanne.frag  suzanne.vert  suzanne1.frag  suzanne1.vert
CSc 471/A1/bundle/bundle/: CMakeLists.txt  Paths.hpp  main.cpp
CSc 471/A2/: UniformLocations.glsl  image.frag  image.vert  main.cpp
CSc 471/A2/bundle/bundle/: UniformLocations.glsl  main.cpp
CSc 471/A3/: UniformLocations.glsl  assignment.hpp  fbo.frag  fbo.vert  main.cpp
CSc 471/A3/bundle/bundle/: CMakeLists.txt  UniformLocations.glsl
CSc 471/A4/: UniformLocations.glsl  assignment.hpp  icosa.frag  icosa.geom  icosa.tesc  icosa.tese  icosa.vert  login.html  main.cpp
CSc 471/A4/bundle/bundle/: CMakeLists.txt  Paths.hpp.in  UniformLocations.glsl  assignment.hpp  main.cpp
CSc 471/Project/: Paths.hpp  UniformLocations.glsl  atmos.frag  atmos.vert  atmosPlan.frag  atmosPlan.vert  chapter-16-accurate-atmospheric-scattering.html  earth.frag  earth.vert  main.cpp
CSc 473/Project/: CSCProject.veg  CSCProject.veg.bak  FinalReport.docx  FinalReportV2.docx  PresentationNotes.docx  untitled-4.tex
CSc 473/Project/ComputerAnimationTemplate2019/: ._README.txt  UpgradeLog.htm
CSc 473/Project/ComputerAnimationTemplate2019/GLModel/: GLModel.vcxproj.filters
CSc 473/Project/ComputerAnimationTemplate2019/anim/: Orbit.h  (+11 more)
CSc 473/Project/ProjStuff/: CSc 473 Project Proposal Simon Walker.docx  Gravitational N-body Simulations README.txt
CSc 473/Project/Project Interim Report Simon Walker/: CSc 473 Project Interim Report Simon Walker.docx
CSc 473/Simon_Walker_Assignment1/: README.txt
CSc 473/Simon_Walker_Assignment2/: README.txt
CSc 473/Simon_Walker_Assignment3/: README.txt
FA 346/: 04 Star Guitar2AudioEdit.aup  FinalTrial.blend
(+457 files in other folders)
